<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="10dp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/backBtnPA"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:src="@drawable/baseline_arrow_back_ios_24"
                android:background="@android:color/transparent"
                android:layout_marginStart="5dp"
                app:tint="@color/black"
                android:contentDescription="@string/back_button" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/world_of_music"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:gravity="center"
                android:layout_weight="1"
                tools:ignore="NestedWeights" />

        </LinearLayout>

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_margin="10dp"
            android:src="@drawable/music_player_icon_splash_screen"
            app:shapeAppearanceOverlay="@style/curved"
            app:strokeColor="@color/cool_blue"
            app:strokeWidth="5dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/songNamePA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="@string/song_name"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:layout_weight="1">

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/previousbtnPA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:icon="@drawable/baseline_navigate_before_24"
                app:iconSize="40dp"
                android:backgroundTint="@color/teal_200" />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/playPausebtnPA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:icon="@drawable/baseline_pause_24"
                app:iconSize="50dp"
                android:layout_marginHorizontal="25dp"
                app:shapeAppearanceOverlay="@style/curved"
                android:backgroundTint="@android:color/holo_red_light"
                app:iconTint="@color/white"/>

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/nextbtnPA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:icon="@drawable/baseline_navigate_next_24"
                app:iconSize="40dp"
                android:backgroundTint="@color/teal_200"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/tvSeekBarStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/start_tv"/>

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/seekBarPA"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/tvSeekBarEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/end_tv"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_marginTop="20dp">

            <ImageButton
                android:id="@+id/repeatBtnPA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_repeat_24"
                android:background="@android:color/transparent"
                app:tint="@color/cool_pink"
                android:contentDescription="@string/repeat_btn"
                android:layout_weight="1"
                tools:ignore="NestedWeights" />

            <ImageButton
                android:id="@+id/equalizerBtnPA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_graphic_eq_24"
                android:background="@android:color/transparent"
                app:tint="@color/cool_pink"
                android:contentDescription="@string/equalizer_btn"
                android:layout_weight="1"/>

            <ImageButton
                android:id="@+id/timerBtnPA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_timer_24"
                android:background="@android:color/transparent"
                app:tint="@color/cool_pink"
                android:contentDescription="@string/timer_btn"
                android:layout_weight="1"/>

            <ImageButton
                android:id="@+id/shareBtnPA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_share_24"
                android:background="@android:color/transparent"
                app:tint="@color/cool_pink"
                android:contentDescription="@string/share_btn"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>